RV-716 - fixed error of invisible fields, fixed state filter, remove active state filter, added query parameter for portfolio manager filter

--- a/src/styles/_basic.scss
+++ b/src/styles/_basic.scss
@@ -129,6 +129,11 @@ select.not-empty {
   }
 }
 
+form.ng-invalid button[type="submit"] {
+  background-color: rgba(51, 51, 51, .3) !important;
+  border-color: rgba(51, 51, 51, .3) !important;
+}
+
 /*---------- Bootstrap ---------- */
 
 .popover {
